better naming for ni_nfvo: route -> sfc, SFCR-> Sfcr, VNF -> Vnf prev, we use the name route instead of sfc, which confuse users prev, we use SFCR and VNF, which is all capital. but Swagger convert it to python code as Sfcr sometime, SFCR othertime, which is also confusing
